# egui-android

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  devenv.nix
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yml
crates/egui-android-demo/src/: lib.rs
crates/egui-mobile-patterns/: Cargo.toml  README.md
crates/egui-mobile-patterns/src/layout/: navigation.rs
examples/demo/: Cargo.toml
examples/demo/src/: lib.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs
src/: activity.rs  app.rs  entrypoint.rs  graphics.rs  ime.rs  input.rs  keycodes.rs  lib.rs  logging.rs  runner.rs  state.rs  window.rs
src/graphics/: canvas.rs  context.rs  glutin.rs  mod.rs  window.rs
src/internal/: input.rs  logging.rs  mod.rs  runner.rs  state.rs
src/internal/bindings/: application_info.rs  mod.rs
src/internal/plugins/: mod.rs  text.rs
src/internal/widgets/: mod.rs  text_context_menu.rs
