[package]
name = "egui-android"
version = "0.1.0"
edition = "2021"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
license = "MIT"

[dependencies]
bincode = "1.3"
egui-wgpu = "0.27"
log = "0.4"

[dependencies.egui]
version = "0.27"
features = ["persistence"]

[dependencies.wgpu]
version = "0.19"
default-features = false

[target.'cfg(target_os = "android")'.dependencies.android-activity]
version = "0.6"
features = ["native-activity"]

[workspace]
resolver = "2"
members = [
    "examples/*",
]
