[package]
name = "egui-android"
version = "0.1.0"
edition = "2021"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
license = "MIT"

[features]
default = ["logger"]
logger = ["dep:android_logger", "dep:log-panics"]
test = ["ndk/test"]

[dependencies]
bincode = "1.3"
egui_glow = "0.27"
log = "0.4"
ndk = "0.9"
raw-window-handle = "0.6"

[dependencies.egui]
version = "0.27"
features = ["persistence"]

[dependencies.glutin]
version = "0.32"
default-features = false
features = ["egl"]

[dependencies.log-panics]
version = "2.1"
optional = true

[target.'cfg(target_os = "android")'.dependencies.android-activity]
version = "0.6"
features = ["native-activity"]

[target.'cfg(target_os = "android")'.dependencies.android_logger]
version = "0.13"
optional = true

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
resolver = "2"
members = [
    "examples/*",
]
