[package]
name = "egui-android-demo"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
egui-android.path = "../../"
egui-mobile-patterns.path = "../../crates/egui-mobile-patterns"

[package.metadata.android]
package = "com.stephencoakley.egui_android_demo"
build_targets = ["armv7-linux-androideabi", "i686-linux-android", "x86_64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

[package.metadata.android.application.activity]
name = "android.app.NativeActivity"
